--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js"
   },
-  "jest": {},
+  "jest": {
+    "watchPathIgnorePatterns": [
+      "node_modules"
+    ]
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
